# nibc-forge

./: .gitignore  Cargo.toml  README.md  example-spec.toml
docs/: README.md  xcs.md
examples/: README.md  example-spec.toml  two-gaia.toml  xcs.toml
hermes_templates/: README.md  gaia.toml  hermes.toml  namada.toml  osmosis.toml
modules/: README.md
modules/gaia/: README.md  docker-compose.yml  init-chain.sh  on-start.sh
modules/gaia2/: docker-compose.yml
modules/hermes/: README.md  docker-compose.yml  init-channels.sh  on-start.sh
modules/namada/: README.md  docker-compose.yml  init-chain.sh  on-start.sh
modules/namada-indexer/: README.md  docker-compose.yml
modules/namada-masp-indexer/: README.md  docker-compose.yml
modules/namada-v1.0.0/: README.md  docker-compose.yml  init-chain.sh  on-start.sh
modules/namada-v1.0.0/genesis/: balances.toml  parameters.toml  tokens.toml
modules/namada/genesis/: parameters.toml  tokens.toml  transactions.toml  validity-predicates.toml
modules/namada/genesis/wasm/: checksums.json  tx_become_validator.376b1442a6b19cd4e85fe9c3a5ff41babde1f8827a9dc503f52d55dc8afc80de.wasm  tx_bond.800b811bca4ff8e131889e6049a832a016aeeeb6448d7d54ec4651f43307c9c4.wasm  (+22 more)
modules/osmosis/: README.md  docker-compose.yml  init-chain.sh  init-xcs.sh  jenv.sh  on-start.sh
modules/pg-admin/: README.md  docker-compose.yml
src/: config.rs  error.rs  main.rs  utils.rs
src/commands/: clean.rs  create.rs  dump_db.rs  ibc_channels.rs  list.rs  mod.rs  start.rs  stop.rs
