[package]
name = "nibc-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "3.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
thiserror = "2.0.9"
toml = "0.8.19"
toml_edit = "0.22.22"
